--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,25 @@
-title: Engineering Application
-description: A GitHub Pages to interactively manage my list of repository.
-baseurl: ""
-url: "https://jmsweb.github.io"
-show_downloads: true
-google_analytics:
-github: [metadata]
-
-pages_list:
-  About: '/about'
-  Archive: '/blog'
-  Feed: '/feed.xml'
+# Site settings
+title: \*folio
+email: you@example.com
+description: > # this means to ignore newlines until "baseurl:"
+  A simple, whitespace, helvetica based portfolio theme.
+baseurl:  # the subpath of your site, e.g. /blog/
+url: https://jmsweb.github.io/  # the base hostname & protocol for your site
+twitter_username: twitter_username
+github_username:  jmsweb
 
 # Build settings
-theme: null
-plugins:
- - jekyll-feed
- - jekyll-seo-tag
+markdown: kramdown
+
+highlighter: rouge
+
+# Pagination
+paginate: 15
+paginate_path: "/blog/page:num/"
+
+
+collections:
+  portfolio:
+    output: true
+    permalink: /portfolio/:path/
+
