--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
 # Site settings
 title: jmsweb
-email: you@example.com
+email: no-rely@jmsweb.github.com
 description: > # this means to ignore newlines until "baseurl:"
-  A simple, whitespace, helvetica based portfolio theme.
+  A simple personal blog and portfolio site.
 baseurl:  # the subpath of your site, e.g. /blog/
 url: https://jmsweb.github.io/  # the base hostname & protocol for your site
+github_url: https://www.github.com/jmsweb
+linkedin_url: https://www.linkedin.com/in/jmsweb/
 twitter_username: twitter_username
 github_username:  jmsweb
 
@@ -14,8 +16,8 @@ markdown: kramdown
 highlighter: rouge
 
 # Pagination
-paginate: 15
-paginate_path: "/blog/page:num/"
+# paginate: 15
+# paginate_path: "/blog/page:num/"
 
 
 collections:
